--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
   },
   "dependencies": {
     "@heroui/button": "^2.2.13",
+    "@heroui/checkbox": "^2.3.12",
     "@heroui/image": "^2.2.9",
+    "@heroui/input": "^2.4.13",
     "@heroui/link": "^2.2.11",
+    "@heroui/modal": "^2.2.11",
     "@heroui/navbar": "^2.2.12",
     "@heroui/react": "^2.7.2",
+    "@heroui/spacer": "^2.2.10",
     "file-loader": "^6.2.0",
     "framer-motion": "^12.4.4",
     "next": "15.1.7",
+    "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
