--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@heroui/navbar": "^2.2.12",
     "@heroui/react": "^2.7.2",
     "@heroui/spacer": "^2.2.10",
+    "@reduxjs/toolkit": "^2.5.1",
     "file-loader": "^6.2.0",
     "framer-motion": "^12.4.4",
     "next": "15.1.7",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
