--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroui/button": "^2.2.13",
+    "@heroui/card": "^2.2.13",
     "@heroui/checkbox": "^2.3.12",
     "@heroui/image": "^2.2.9",
     "@heroui/input": "^2.4.13",
@@ -35,8 +36,7 @@
     "eslint-config-next": "15.1.7",
     "postcss": "^8",
     "prettier": "3.5.1",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.7.3"
+    "tailwindcss": "^3.4.1"
   },
   "packageManager": "yarn@4.6.0"
 }
